--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Para Dara</title>
+    <title>Para Maria</title>
     <link rel="stylesheet" href="Style.css">
 </head>
 <body>
     <div class="Contenedor">
-        <h1>Hola Morena Hermosa</h1>
+        <h1>Hola Linda</h1>
         <p class="Mensaje">Solo queria decirte que...</p>
         <h2 class="Revelacion">Te quiero mucho 💘 </h2>
         <button onclick="RevelarMensaje()">Toca aquí</button>
